fixed pos for hidden menu on mobile

--- a/styles/scss/partials/_general.scss
+++ b/styles/scss/partials/_general.scss
@@ -17,3 +17,8 @@
   transition: all .3s ease;
   z-index: 999;
 }
+
+
+.white-bg {
+  background: hsl(0, 0%, 100%);
+}
