--- a/styles/scss/partials/_main.scss
+++ b/styles/scss/partials/_main.scss
@@ -87,7 +87,7 @@
       background-image: url('../../images/hidden-menu.jpg');
       background-size: cover;
       background-position: center;
-      position: absolute;
+      position: fixed;
       width: 100%;
       height: 100vh;
       top: 0;
